books-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: books-api
spec:
  selector:
    app: books-api
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
